# docs/swagger.json
@@ -14,6 +14,20 @@
         "title": "Teratany API",
         "version": "1.0.0"
     },
+    "components": {
+        "securitySchemes": {
+            "bearerAuth": {
+                "type": "http",
+                "scheme": "bearer",
+                "bearerFormat": "JWT"
+            }
+        }
+    },
+    "security": [
+        {
+            "bearerAuth": []
+        }
+    ],
     "paths": {
         "/user/authentication/verifyEmail": {
             "post": {
@@ -233,6 +247,135 @@
                 "responses": {
                     "200": {
                         "description": "Les informations publique de l'utilisateur"
+                    }
+                }
+            }
+        },
+        "/user/": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Recherche d'utilisateur",
+                "description": "Recherche d'utilisateur, retourne une liste des utilisateurs correspondant au filter de recherche",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "filter",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "nom ou email"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "liste des utilisateurs correspondant"
+                    }
+                }
+            }
+        },
+        "/user/displayName": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Recherche dun utilisateur par son displayName",
+                "description": "Recherche d'utilisateur, retourne les donnée de l'utilisateur sinon retourne une erreur",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "displayName",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "nom de l'utilisateur"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "l'utilisateurs correspondant"
+                    }
+                }
+            }
+        },
+        "/user/email": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Recherche dun utilisateur par son email",
+                "description": "Recherche d'utilisateur, retourne les donnée de l'utilisateur sinon retourne une erreur",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "email",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "email l'utilisateur"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "l'utilisateurs correspondant"
+                    }
+                }
+            }
+        },
+        "/user/withCoordonates": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "La liste des utilisateurs ayant mis leurs position géographique en public",
+                "description": "La liste des utilisateurs ayant mis leurs position géographique en public",
+                "responses": {
+                    "200": {
+                        "description": "l'utilisateurs correspondant"
+                    }
+                }
+            }
+        },
+        "/user/byToken": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "summary": "Voir les information de l'utilisateur connecté",
+                "description": "Recherche d'utilisateur, retourne les donnée de l'utilisateur sinon retourne une erreur",
+                "responses": {
+                    "200": {
+                        "description": "l'utilisateurs connecté"
+                    }
+                }
+            }
+        },
+        "/user/password/recovery": {
+            "get": {
+                "tags": [
+                    "user"
+                ],
+                "summary": "Envoyer email pour récuperer le mot de passe de l'utilisateur",
+                "description": "Un code de confirmation sera envoyé par email à l'utilisateur.",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "email",
+                        "schema": {
+                            "type": "string"
+                        },
+                        "description": "email l'utilisateur"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "le mail a été envoyé"
                     }
                 }
             }
